--- a/PROJECT_DEMO/.settings/org.talend.repository.prefs
+++ b/PROJECT_DEMO/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:G8x/2m4HiJZoV/0fycW76nSsMD8U0geYBUkqs3ylSLZf3LiS+F1ZNao\=
